--- a/src/main/resources/view/PrescriptionView.fxml
+++ b/src/main/resources/view/PrescriptionView.fxml
@@ -15,28 +15,22 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="517.0" prefWidth="967.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.PrescriptionController">
    <children>
-      <GridPane layoutX="32.0" layoutY="23.0" prefHeight="151.0" prefWidth="259.0">
+      <GridPane layoutX="32.0" layoutY="23.0" prefHeight="54.0" prefWidth="259.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.0" minWidth="10.0" prefWidth="122.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="202.0" minWidth="10.0" prefWidth="95.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="id" textFill="#630749" />
-            <Label text="VisitId" textFill="#630749" GridPane.rowIndex="1" />
-            <Label text="price" textFill="#630749" GridPane.rowIndex="2" />
-            <TextField fx:id="idText" editable="false" GridPane.columnIndex="1" />
-            <TextField fx:id="visitIdText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="VisitId" textFill="#630749" />
+            <TextField fx:id="visitIdText" GridPane.columnIndex="1" />
          </children>
       </GridPane>
       <HBox layoutX="14.0" layoutY="447.0" prefHeight="54.0" prefWidth="283.0">
          <children>
-            <Button fx:id="addDrugButton" mnemonicParsing="false" prefWidth="80.0" text="AddDrug" textFill="#87143d">
+            <Button fx:id="addDrugButton" mnemonicParsing="false" prefWidth="150.0" text="AddDrug" textFill="#87143d">
                <font>
                   <Font name="System Italic" size="14.0" />
                </font>
@@ -44,15 +38,7 @@
                   <Insets right="20.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="drugEditButton" layoutX="20.0" mnemonicParsing="false" prefWidth="80.0" text="Edit" textFill="#87143d">
-               <HBox.margin>
-                  <Insets right="20.0" top="15.0" />
-               </HBox.margin>
-               <font>
-                  <Font name="System Italic" size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="drugDeleteButton" layoutX="20.0" mnemonicParsing="false" prefWidth="80.0" text="Delete" textFill="#87143d">
+            <Button fx:id="drugDeleteButton" layoutX="20.0" mnemonicParsing="false" prefWidth="150.0" text="DeleteDrug" textFill="#87143d">
                <HBox.margin>
                   <Insets top="15.0" />
                </HBox.margin>
@@ -72,7 +58,7 @@
             <TableColumn fx:id="priceColumn" prefWidth="125.0" text="Price" />
         </columns>
       </TableView>
-      <TableView fx:id="drugListTable" layoutX="4.0" layoutY="210.0" prefHeight="237.0" prefWidth="302.0">
+      <TableView fx:id="drugListTable" layoutX="4.0" layoutY="106.0" prefHeight="341.0" prefWidth="302.0">
         <columns>
           <TableColumn fx:id="drugIdColumn" prefWidth="58.0" text="DrugId" />
           <TableColumn fx:id="drugNameColumn" prefWidth="94.0" text="name" />
@@ -80,7 +66,7 @@
             <TableColumn fx:id="drugQuantityColumn" prefWidth="77.0" text="quantity" />
         </columns>
       </TableView>
-      <Label layoutX="126.0" layoutY="183.0" opacity="0.66" text="DrugList">
+      <Label layoutX="119.0" layoutY="77.0" opacity="0.66" text="DrugList">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
