--- a/src/main/resources/view/CashDeskView.fxml
+++ b/src/main/resources/view/CashDeskView.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.CashDeskController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="359.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.CashDeskController">
     <children>
-        <GridPane layoutX="59.0" layoutY="80.0" prefHeight="284.0" prefWidth="243.0">
+        <GridPane layoutX="14.0" layoutY="14.0" prefHeight="288.0" prefWidth="243.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -27,21 +27,21 @@
             </rowConstraints>
             <children>
                 <Label text="id" />
-                <Label text="bank" GridPane.rowIndex="1" />
+                <Label text="bankId" GridPane.rowIndex="1" />
                 <Label text="payType" GridPane.rowIndex="2" />
                 <ComboBox fx:id="payTypeCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <TextField fx:id="idText" GridPane.columnIndex="1" />
                 <TextField fx:id="bankText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             </children>
         </GridPane>
-        <TableView fx:id="cashDeskTable" layoutX="354.0" layoutY="95.0" prefHeight="322.0" prefWidth="349.0">
+        <TableView fx:id="cashDeskTable" layoutX="272.0" layoutY="14.0" prefHeight="322.0" prefWidth="349.0">
             <columns>
                 <TableColumn fx:id="idColumn" prefWidth="96.0" text="id" />
                 <TableColumn fx:id="bankColumn" prefWidth="133.0" text="bank" />
                 <TableColumn fx:id="payTypeColumn" minWidth="0.0" prefWidth="119.0" text="payType" />
             </columns>
         </TableView>
-        <HBox layoutX="49.0" layoutY="388.0" prefHeight="91.0" prefWidth="254.0">
+        <HBox layoutX="9.0" layoutY="292.0" prefHeight="40.0" prefWidth="254.0">
             <children>
                 <Button fx:id="saveButton" mnemonicParsing="false" text="  save  ">
                     <HBox.margin>
